fix spacing on breakpoint. Need to fix 650-975 px range

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -502,4 +502,7 @@ small,
     padding-top: 12vh;
     // background-color: black;
   }
+  #enter-container {
+    padding-top: 12vh;
+  }
 }
